--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -462,6 +462,9 @@
                                                             <rect key="frame" x="34" y="0.0" width="42" height="30"/>
                                                             <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                                             <state key="normal" title="전송"/>
+                                                            <connections>
+                                                                <action selector="sendButtonTapped:" destination="iws-kV-VAm" eventType="touchUpInside" id="AK4-lv-PXg"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                     <color key="tintColor" red="0.85098039219999999" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
